--- a/HTML/Assignment2/SchoolInformationPage.html
+++ b/HTML/Assignment2/SchoolInformationPage.html
@@ -5,15 +5,15 @@
 <div class="header">
   <header>
     <div class="logo">
-      <img alt="Logo image">
+      <img src="./images/math.svg.png" alt="Logo image" width="100">
     </div>
     <Label>School Information Page</label>
     <div class="menu">
       <ul>
-        <li>Home</li>
-        <li>About Me</li>
-        <li>Google</li>
-        <li>My Sites</li>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">Google</a></li>
+        <li><a href="">My Sites</a></li>
       </ul>
     </div>
   </header>
